# uafx-desktop-app

./: CMakeLists.txt
src/: CustomWidgets.cpp  CustomWidgets.h  MainWindow.cpp  MainWindow.h  MidiController.cpp  MidiController.h  controls.json
